Fixed misalignment of static fields and their labels in forms (#401)
* Fixed misalignment of static fields and their labels in forms

Removed `!important` from float none and added padding to the labels.

* removed map file

* Fixed broken user form for test

* Fixed compiled css

--- a/djangocms_admin_style/sass/components/_forms.scss
+++ b/djangocms_admin_style/sass/components/_forms.scss
@@ -193,6 +193,9 @@ form {
             &:not(.vCheckboxLabel):after {
                 content: none;
             }
+            & + div.readonly {
+                margin-top: -30px
+            }
         }
         label + label {
             margin-left: 10px;
